Fix Inconsistent vertical spacing in header and paragraph

--- a/browser/components/markdown.styl
+++ b/browser/components/markdown.styl
@@ -125,7 +125,6 @@ h1
   padding-bottom 0.3em
   line-height 1.2em
   border-bottom solid 1px borderColor
-  margin 1em 0 0.44em
   &:first-child
     margin-top 0
 h2
@@ -133,29 +132,23 @@ h2
   padding-bottom 0.3em
   line-height 1.225em
   border-bottom solid 1px borderColor
-  margin 1em 0 0.57em
   &:first-child
     margin-top 0
 h3
   font-size 1.5em
   line-height 1.43em
-  margin 1em 0 0.66em
 h4
   font-size 1.25em
   line-height 1.4em
-  margin 1em 0 0.8em
 h5
   font-size 1em
   line-height 1.4em
-  margin 1em 0 1em
 h6
   font-size 1em
   line-height 1.4em
-  margin 1em 0 1em
   color #777
 p
   line-height 1.6em
-  margin 0 0 1em
   white-space pre-line
   word-wrap break-word
 img
